[workspace]
members = ["contracts/*"]
# members = ["contracts/*", "packages/*", "scripts"]
resolver = "2"

# Dependencies can be inherited from a workspace by specifying the dependency in
# the `[workspace.dependencies]` table. To use workspace crates, add them to the
# `[dependencies]` table with `workspace = true`.
# ```
# anyhow = { workspace = true }
# ```
[workspace.dependencies]
cosmwasm-schema = { version = "1.4.1" }
cosmwasm-std = { version = "1.4.1" }
cosmwasm-storage = { version = "1.4.1" }
cw-storage-plus = { version = "1.1.0" }
cw-controllers = { version = "1.1.0" }
cw2 = { version = "1.1.0" }
cw20 = { version = "1.1.0" }
cw-utils = { version = "1.0.3" }
cw20-base = { version = "1.1.0" }
cw-paginate-storage = { version = "2.3.0" }
cw-ownable = { version = "0.5.1" }

thiserror = "1.0.49"
cw-multi-test = { version = "0.17.0" }
anyhow = "1"