[package]
name = "stake"
authors = ["Berke (pzzaworks)"]
edition = "2018"
# license = { workspace = true }
# repository = { workspace = true }
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-controllers = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
cw20-base = {  workspace = true, features = ["library"] }
cw2 = { workspace = true }
thiserror = { workspace = true }
schemars = "0.8.8"
cw-paginate-storage = { workspace = true }
cw-ownable = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
